[package]
name = "morty"
version = "0.1.0"
description = "A SystemVerilog source file pickler."
authors = ["Florian Zaruba <zarubaf@iis.ee.ethz.ch>", "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
term = "0.6"
clap = "2"
sv-parser = "0.6.3"
failure = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.6.0"
colored = "1.9.3"
tempfile = "3.1.0"


# [patch.crates-io]
# sv-parser = {path = "sv-parser/sv-parser"}
