[package]
name = "morty"
version = "0.6.0"
description = "A SystemVerilog source file pickler."
authors = ["Florian Zaruba <zarubaf@iis.ee.ethz.ch>", "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["hardware-dev", "system-verilog"]
categories = ["command-line-utilities"]
repository = "https://github.com/zarubaf/morty/"
readme = "README.md"

[dependencies]
anyhow = "1.0"
term = "0.6"
clap = { version = "3", features = ["derive", "cargo"] }
sv-parser = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.6.0"
colored = "2.0.0"
pulldown-cmark = "0.8.0"
rayon = "1.3"

[lib]
name = "morty"
path = "src/lib.rs"

[patch.crates-io]
# sv-parser = {path = "sv-parser/sv-parser"}
# sv-parser = { git = "https://github.com/zarubaf/sv-parser" }
