[package]
name = "morty"
version = "0.9.0"
description = "A SystemVerilog source file pickler."
authors = ["Florian Zaruba <zarubaf@iis.ee.ethz.ch>", "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>", "Michael Rogenmoser <michaero@iis.ee.ethz.ch>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["hardware-dev", "system-verilog"]
categories = ["command-line-utilities"]
repository = "https://github.com/pulp-platform/morty/"
readme = "README.md"

[dependencies]
anyhow = "1.0"
term = "0.7"
clap = { version = "4", features = ["derive", "cargo"] }
sv-parser = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "4"
colored = "2.0.0"
pulldown-cmark = "0.9"
rayon = "1.3"
time = { version = "0.3", features = ["local-offset"] }
petgraph = "0.6"

[lib]
name = "morty"
path = "src/lib.rs"

[patch.crates-io]
# sv-parser = {path = "sv-parser/sv-parser"}
# sv-parser = { git = "https://github.com/zarubaf/sv-parser" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"
assert_fs = "1.0"
tempfile = "3.3"
